# ksc-azure-openai-demo

./: .pdm-python  .pre-commit-config.yaml  README.md
azure-openai-demo/: README.md  pyproject.toml  requirements.txt
azure-openai-demo/src/azure_openai_demo/: main.py
